[gd_scene load_steps=7 format=3 uid="uid://dqoxpxne4rcpy"]

[ext_resource type="FontFile" uid="uid://b6ejypfn354pw" path="res://fonts/PressStart2P-Regular.ttf" id="1_8sqo3"]
[ext_resource type="Script" path="res://scripts/ui/start_menu_script.gd" id="1_i2cnv"]
[ext_resource type="Texture2D" uid="uid://cx4yb24vkl1ky" path="res://scenes/ui/background_v1.png" id="1_t17bx"]
[ext_resource type="Texture2D" uid="uid://b2fbnhta1nneh" path="res://scenes/ui/title.png" id="2_2ah1h"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="4_oalls"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qayps"]
shader = ExtResource("4_oalls")
shader_parameter/blur = 0.674
shader_parameter/brightness = 0.764

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_i2cnv")

[node name="BackgroundV1" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.32419, 1.32419)
texture = ExtResource("1_t17bx")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(960, 377)
scale = Vector2(1.73965, 1.73965)
texture = ExtResource("2_2ah1h")

[node name="BlurBackground" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_qayps")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMenu" type="CanvasLayer" parent="."]
layer = 2

[node name="StartMenu" type="CenterContainer" parent="StartMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 234.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="StartMenu/StartMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/StartMenu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/StartMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Neues Spiel"

[node name="LoadGameButton" type="Button" parent="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Letzten Spielstand laden"

[node name="QuitButton" type="Button" parent="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Spiel beenden"

[node name="ConfirmationScreen" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="Label" parent="ConfirmationScreen"]
offset_left = 60.0
offset_top = 625.0
offset_right = 1860.0
offset_bottom = 685.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = "Sicher, dass du das Spiel beenden möchtest?"
horizontal_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="ConfirmationScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 233.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ConfirmationScreen/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationScreen/CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="confirm_quit" type="Button" parent="ConfirmationScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Ja, Spiel beenden"

[node name="confirm_abbruch" type="Button" parent="ConfirmationScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Nein, abbrechen"

[node name="DifficultySelector" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Label" type="Label" parent="DifficultySelector"]
offset_left = 585.0
offset_top = 625.0
offset_right = 1335.0
offset_bottom = 658.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = "Schwierigkeitsgrad wählen"
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="DifficultySelector"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 233.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="DifficultySelector/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DifficultySelector/CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultySelector/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="EasyDifficultyButton" type="Button" parent="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "EINFACH"

[node name="NormalDifficultyButton" type="Button" parent="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "NORMAL"

[node name="HardDifficultyButton" type="Button" parent="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "SCHWER"

[node name="DifficultyBackToMenuButton" type="Button" parent="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Zurück zum Hauptmenü"

[node name="LoadGameError" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Label" type="Label" parent="LoadGameError"]
offset_left = 215.0
offset_top = 626.0
offset_right = 1715.0
offset_bottom = 659.0
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = "ES WURDE LEIDER KEIN LAUFENDER SPIELSTAND GEFUNDEN"

[node name="CenterContainer" type="CenterContainer" parent="LoadGameError"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 232.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="LoadGameError/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="LoadGameError/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="LoadGameError/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LoadGameErrorBackButton" type="Button" parent="LoadGameError/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 25
text = "Zurück zum Hauptmenü"

[node name="DeathScreen" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Label" type="Label" parent="DeathScreen"]
offset_left = 585.0
offset_top = 625.0
offset_right = 1335.0
offset_bottom = 658.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = "Du bist gestorben."
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="DeathScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 233.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="DeathScreen/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen/CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Respawn" type="Button" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Level neu starten"

[node name="Hauptmenu" type="Button" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Zum Hauptmenü"

[node name="IntroPart1" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Label1" type="Label" parent="IntroPart1"]
offset_top = 100.0
offset_right = 1920.0
offset_bottom = 445.0
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 60
text = "Kodex"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="IntroPart1"]
offset_left = 195.0
offset_top = 220.0
offset_right = 1725.0
offset_bottom = 781.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = " -§1-

Die Geheimhaltung des Ordens hat höchste Priorität.

Trifft eine Person versehentlich auf den Orden,

so muss sie vor die Wahl zwischen Beitritt und Tod 

gestellt werden.



 -§2-

Ein Beitritt in den Orden wird mit dem eigenen Blut 

auf dem Kodex besiegelt."

[node name="CenterContainer" type="CenterContainer" parent="IntroPart1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="IntroPart1/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="IntroPart1/CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="IntroPart1/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="besiegeln" type="Button" parent="IntroPart1/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Kodex hier besiegeln"

[node name="IntroPart2" type="CanvasLayer" parent="."]
visible = false

[node name="Label3" type="Label" parent="IntroPart2"]
offset_top = 100.0
offset_right = 1920.0
offset_bottom = 445.0
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 60
text = "..."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="IntroPart2"]
offset_left = 195.0
offset_top = 220.0
offset_right = 1725.0
offset_bottom = 781.0
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 30
text = " -§3-

Befindet sich das Blut nicht am Ende des Kodex, so 

hat der Neuling seine Pflicht, den Kodex vorher zu

studieren, verletzt.


Er kann sich dieser Schuld nur bereinigen, indem

er während einer Prüfung alle verteilten Kodex-

fragmente findet."

[node name="CenterContainer2" type="CenterContainer" parent="IntroPart2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="IntroPart2/CenterContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="IntroPart2/CenterContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="IntroPart2/CenterContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="prufung starten" type="Button" parent="IntroPart2/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8sqo3")
theme_override_font_sizes/font_size = 24
text = "Prüfung starten"

[connection signal="pressed" from="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="StartMenu/StartMenu/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ConfirmationScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/confirm_quit" to="." method="_on_confirm_quit_pressed"]
[connection signal="pressed" from="ConfirmationScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/confirm_abbruch" to="." method="_on_confirm_abbruch_pressed"]
[connection signal="pressed" from="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/EasyDifficultyButton" to="." method="_on_easy_difficulty_button_pressed"]
[connection signal="pressed" from="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NormalDifficultyButton" to="." method="_on_normal_difficulty_button_pressed"]
[connection signal="pressed" from="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HardDifficultyButton" to="." method="_on_hard_difficulty_button_pressed"]
[connection signal="pressed" from="DifficultySelector/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DifficultyBackToMenuButton" to="." method="_on_difficulty_back_to_menu_button_pressed"]
[connection signal="pressed" from="LoadGameError/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/LoadGameErrorBackButton" to="." method="_on_load_game_error_back_button_pressed"]
[connection signal="pressed" from="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Hauptmenu" to="." method="_on_hauptmenu_pressed"]
[connection signal="pressed" from="IntroPart1/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/besiegeln" to="." method="_on_besiegeln_pressed"]
[connection signal="pressed" from="IntroPart2/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/prufung starten" to="." method="_on_prufung_starten_pressed"]
